[package]
name = "chess"
version = "0.1.0"
authors = ["Johnny Urosevic <TheMagicalCake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
good-web-game = "0.5.0"
cgmath = { version = "0.17", features = ["mint"] }
mint = "0.5.9"
